--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
-<html>
+ <!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Mi página web
@@ -7,6 +8,10 @@
             text-align: center;
             font-size: 18px;
             color: red;
+        }
+
+        table{
+            border-collapse: collapse;
         }
     </style>
     <script>
@@ -55,21 +60,29 @@
     <div>
         <h2>Tabla</h2>
         <table>
-            <tr>
-                <td>Nombre</td>
-                <td>Edad</td>
-                <td>País</td>
-            </tr>
-            <tr>
-                <td>Persona 1</td>
-                <td>25</td>
-                <td>España</td>
-            </tr>
-            <tr>
-                <td>Persona 2</td>
-                <td>30</td>
-                <td>México</td>
-            </tr>
+            <caption>Información sobre nosotros</caption>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Edad</th>
+                    <th>País</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th>Persona 1</th>
+                    <td>25</td>
+                    <td>España</td>
+                </tr>
+                
+                <tr>
+                    <th>Persona 2</th>
+                    <td>30</td>
+                    <td>México</td>
+                </tr>
+            </tbody>
+
         </table>
     </div>
 </body>
