--- a/home.html
+++ b/home.html
@@ -71,13 +71,13 @@
 
             <tbody>
                 <tr>
-                    <th>Persona 1</th>
+                    <td>Persona 1</th>
                     <td>25</td>
                     <td>España</td>
                 </tr>
                 
                 <tr>
-                    <th>Persona 2</th>
+                    <td>Persona 2</th>
                     <td>30</td>
                     <td>México</td>
                 </tr>
